🐛 Réglage du bug de l'overflow sur mobile

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -7,6 +7,7 @@
   scroll-behavior: smooth;
 }
 
+html,
 body {
   overflow-x: hidden;
 }
